--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-#espantaviejas {
+#Espantaviejas {
     background-color: #efefef;
     margin: 0 auto;
     background-image: url("Espantaviejas/theboys.jpg");
